--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <h1>Hola Admin</h1>
                     <span>You are getting logged in from <strong>Spain</strong></span>
                 </div>
-                <div class="col-md-6 col-xs-6 id" align="center">
+                <div class="col-md-6 col-xs-6 ip" align="center">
                     <h3>CHROOME <br>YOUR BROWSER</h3>
                 </div>
-                <div class="col-md-6 col-xs-6 id" align="center">
+                <div class="col-md-6 col-xs-6 ip" align="center">
                     <h3>192.168.1.1 <br>YOUR IP</h3>
                 </div>
                 <div class="col-md-12 col-xs-12 login-control">
