--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 </div>
                 <div class="col-md-12 col-xs-12 login-control">
                     <div class="control">
-                        <div class="label">Email Address</div>
+                        <div class="label" align="left">Email Address</div>
                         <input type="text" class="form-control" value="andrzej@facebook.com">
                     </div>
                     <div class="control">
-                        <div class="label">Password</div>
+                        <div class="label" align="left">Password</div>
                         <input type="password" class="form-control" value="12345">
                     </div>
                     <div align='center'>
